@@ -1,10 +1,13 @@
 package edu.touro.mcon364.finalreview.orderflowhandoff.exercises;
 
+import edu.touro.mcon364.finalreview.model.Priority;
 import edu.touro.mcon364.finalreview.model.SupportTicket;
 import edu.touro.mcon364.finalreview.model.TicketReport;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * Building a report from completed work.
@@ -23,11 +26,11 @@ import java.util.Map;
  * Before coding, think about the problem in two layers:
  *
  * Layer 1 — What data does this object need?
- * - Should the list of tickets be passed into every method?
+ * - Should the list of tickets be passed into every method? yes and use streams
  * - Or does it make sense for the builder to receive the list once and then
- *   answer several report questions about that same list?
+ *   answer several report questions about that same list? no
  * - If this class stores the list, should it keep the original reference or
- *   protect itself with a copy?
+ *   protect itself with a copy? yes
  *
  * Layer 2 — What questions does the report ask?
  * - Which questions produce a single number?
@@ -70,7 +73,10 @@ public class TicketReportBuilder {
      */
     public TicketReportBuilder(List<SupportTicket> tickets) {
         // TODO: validate and store the tickets this object will analyze
-        this.tickets = List.of();
+        if (tickets == null) {
+            throw new IllegalArgumentException("tickets cannot be null");
+        }
+        this.tickets = List.copyOf(tickets);
     }
 
     /**
@@ -78,7 +84,10 @@ public class TicketReportBuilder {
      */
     public long getResolvedCount() {
         // TODO: calculate from tickets
-        return 0;
+
+        return tickets.stream()
+                .filter(ticket -> ticket.resolved()==true)
+                .count();
     }
 
     /**
@@ -87,8 +96,36 @@ public class TicketReportBuilder {
      * Tickets that are not resolved should not affect this average.
      */
     public double getAverageResolutionMinutes() {
-        // TODO: calculate from tickets
-        return 0.0;
+        // TODO: calculate from tickets- I could hv used summaryStats instead
+        return tickets.stream()
+                .filter(ticket -> ticket.resolved()==true)
+                // .mapToInt(...): This tells the stream, "I want to transform every item inside this stream into a primitive Java int."
+                // It converts your stream of complex objects (Stream<SupportTicket>) into a specialized stream of primitive integers (IntStream).
+                // In Java, standard streams handle generic objects (like Stream<SupportTicket>).
+                // If you try to calculate an average directly on an object stream, Java doesn't know how—because you can't mathematically add or divide custom objects together.
+                // By using mapToInt, you switch to a highly optimized IntStream that unlocks built-in statistical functions like:
+                //.average(), .sum(), .max(), .min()
+                // SupportTicket::minutesToResolve: This is a method reference. It is a cleaner, shorthand way of writing the lambda expression: ticket -> ticket.minutesToResolve().
+                // So in one single step, Java does two things at the exact same time:
+                // Extraction (Pulling): It reaches inside the SupportTicket object and grabs the value of minutesToResolve.
+                // Conversion (Casting): It unwraps that value from the object structure and drops it directly into a primitive IntStream.
+                // If you want to extract the minutes without converting them into primitive values, you use the standard .map() method instead of .mapToInt()
+                .mapToInt(SupportTicket::minutesToResolve)
+                .average()
+                .orElse(0);
+        /* Or using Summary Statistics:
+        return tickets.stream()
+            .filter(SupportTicket::resolved)
+            .mapToInt(SupportTicket::minutesToResolve)
+            .summaryStatistics() // ◄ Gathers all math stats at once
+            .getAverage();       // ◄ Extracts just the average
+        Metric Available	How to grab it from your code	Value if stream is empty
+        Average	                .getAverage()	             0.0
+        Count	                .getCount()	                 0
+        Sum	                    .getSum()	                 0
+        Maximum	                .getMax()	                 Integer.MIN_VALUE
+        Minimum	                .getMin()	                 Integer.MAX_VALUE
+         */
     }
 
     /**
@@ -96,7 +133,13 @@ public class TicketReportBuilder {
      */
     public Map<String, Long> getCountByCategory() {
         // TODO: calculate from tickets
-        return Map.of();
+        Map<String, Long> mutableMap= tickets.stream()
+                .collect(Collectors.groupingBy(
+                        ticket-> ticket.category(), //key- or use SupportTicket::category
+                                Collectors.counting() //value
+                ));
+        // we return a non modifiable map so now no one can destroy or wipe our data:)
+        return Collections.unmodifiableMap(mutableMap);
     }
 
     /**
@@ -104,7 +147,9 @@ public class TicketReportBuilder {
      */
     public List<SupportTicket> getHighPriorityUnresolved() {
         // TODO: calculate from tickets
-        return List.of();
+        return tickets.stream()
+                .filter(ticket -> ticket.resolved()== false && ticket.priority() == Priority.HIGH)
+                .toList();
     }
 
     /**
